--- a/base.css
+++ b/base.css
@@ -9,8 +9,7 @@ body {
 
 .masthead {
   background-image: url("masthead.jpg");
+  color: transparent;
   background-size: cover;
   background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
